changed a bunch of shit

--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -8,9 +8,18 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1>Electron boilerplate</h1>
+				<h1>Kurier</h1>
 			</header>
-			<section class="main"></section>
+
+
+			<!--<script>require(./renderer.js)</script>-->
+			<section class="main">
+				<h2>
+				<div id=chatlog></div>
+				<button type="send">Send</button>
+				<input type="text">
+				</h2>
+			</section>
 			<footer></footer>
 		</div>
 	</body>
