--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Electron boilerplate</title>
+
+		<title>Kurier Application</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
@@ -11,16 +12,17 @@
 				<h1>Kurier</h1>
 			</header>
 
-
-			<!--<script>require(./renderer.js)</script>-->
-			<section class="main">
+			<div class="main">
 				<h2>
 				<div id=chatlog></div>
-				<button type="send">Send</button>
-				<input type="text">
+				<button type="button" id="send-button" class="nav-button">Send</button>
+				<input type="text" id="message">
 				</h2>
-			</section>
-			<footer></footer>
+			</div>
 		</div>
+
+		<script>
+			require('./renderer-process/chat.js')
+		</script>		
 	</body>
 </html>
