--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -9,10 +9,12 @@
 			module = undefined;
 		}
 	</script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<script src="renderer-process/chat.js"></script>
 
 	<script>
@@ -24,24 +26,42 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container" id="login-container">
 		<header>
 			<h1>Kurier</h1>
-
-
-
-		<form id="login" style="margin-top:40px">
-			<div class="input-group">
-				<input class="form-control" type="text" placeholder="Username" name="username">
-				<span class="input-group-btn">
+			<form id="login" style="margin-top:40px">
+				<div class="input-group">
+					<input class="form-control" type="text" placeholder="Username" name="username">
+					<span class="input-group-btn">
 			<button type="submit" class="btn btn-primary">Login</button>
 		</span>
+				</div>
+			</form>
+			<div id="loading" class="hidden text-center" style="margin-top: 40px; font-size:40px">
+				<i class="fa fa-spin fa-spinner"></i>
 			</div>
-		</form>
-</header>
 
+		</header>
 	</div>
+	<div class="container hidden" id="main-window">
+		<div class="row">
+			<div class="col-md-2" id="user-window">
+			</div>
 
+			<div class="col-md-10" id="message-window">
+				<div class="none">
+					<h3>no messages</h3>
+				</div>
+				<div class="loading hidden">
+					<i class="fa fa-spin fa-spinner"></i>
+				</div>
+				<div class="content hidden">
+					
+				</div>
+
+			</div>
+		</div>
+	</div>
 
 </body>
 
