--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -50,16 +50,26 @@
 
 			<div class="col-md-10" id="message-window">
 				<div class="none">
-					<h3>no messages</h3>
+					<h4>no messages</h4>
 				</div>
 				<div class="loading hidden">
 					<i class="fa fa-spin fa-spinner"></i>
 				</div>
 				<div class="content hidden">
-					
+
 				</div>
 
 			</div>
+		</div>
+		<div id="message-box">
+			<form id="chat-input" class="col-md-12" >
+				<div class="input-group">
+					<input class="form-control" type="text" placeholder="Username" name="message">
+					<span class="input-group-btn">
+			<button type="submit" class="btn btn-primary">Login</button>
+			</span>
+				</div>
+			</form>
 		</div>
 	</div>
 
