Got messaging working properly between the two

--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -64,9 +64,9 @@
 		<div id="message-box">
 			<form id="chat-input" class="col-md-12" >
 				<div class="input-group">
-					<input class="form-control" type="text" placeholder="Username" name="message">
+					<input class="form-control" type="text" placeholder="Message" name="message">
 					<span class="input-group-btn">
-			<button type="submit" class="btn btn-primary">Login</button>
+			<button type="submit" class="btn btn-primary">Send <i class="fa fa-send"></i></button>
 			</span>
 				</div>
 			</form>
