--- a/ClientApplication/index.html
+++ b/ClientApplication/index.html
@@ -10,13 +10,10 @@
 		}
 	</script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<script src="renderer-process/chat.js"></script>
-
 	<script>
 		if (window.module) module = window.module;
 	</script>
@@ -30,12 +27,10 @@
 		<header>
 			<h1>Kurier</h1>
 			<form id="login" style="margin-top:40px">
-				<div class="input-group">
-					<input class="form-control" type="text" placeholder="Username" name="username">
-					<span class="input-group-btn">
-			<button type="submit" class="btn btn-primary">Login</button>
-		</span>
-				</div>
+				<input class="form-control" type="text" style="margin-bottom:15px" placeholder="HTTP URL" name="http-url">
+					<input class="form-control" type="text" style="margin-bottom:15px" placeholder="WebSocket URL" name="ws-url">
+					<input class="form-control" type="text" style="margin-bottom:15px" placeholder="Username" name="username">
+				<button type="submit" class="btn btn-primary btn-block">Login</button>
 			</form>
 			<div id="loading" class="hidden text-center" style="margin-top: 40px; font-size:40px">
 				<i class="fa fa-spin fa-spinner"></i>
@@ -43,7 +38,7 @@
 
 		</header>
 	</div>
-	<div class="container hidden" id="main-window">
+	<div class="container hidden" id="main-window" style="margin-top: 10px; margin-bottom: 10px; margin-left:10px; margin-right: 10px">
 		<div class="row">
 			<div class="col-md-2" id="user-window">
 			</div>
